# introduction_to_scikit-learn

./: introduction-to-scikit-learn.ipynb  pyproject.toml  random_forest_model_1.pkl
